Modernize bean generation code (#390)
* Modernize bean generation code

* Also fix PMD config

* Avoid additional public method